--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "node+mongoDB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/BillyPhilosophy/blogServer/issues"
   },
-  "homepage": "https://github.com/BillyPhilosophy/blogServer#readme"
+  "homepage": "https://github.com/BillyPhilosophy/blogServer#readme",
+  "dependencies": {
+    "dotenv": "^16.0.2",
+    "koa": "^2.13.4",
+    "koa-router": "^12.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
