--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^16.0.2",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
