--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/BillyPhilosophy/blogServer#readme",
   "dependencies": {
     "dotenv": "^16.0.2",
+    "joi": "^17.7.0",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-router": "^12.0.0",
