更改环境配置文件

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 APP_PORT = 8000
 JWT_SECRET = DGC_Blog
-MYSQL_HOST = 139.196.124.91
+MYSQL_HOST = localhost
 MYSQL_PORT = 3306
 MYSQL_USER = my_blog
 MYSQL_PWD = admin
