--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "node+MySQL",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=production node ./src/main.js",
     "dev": "cross-env NODE_ENV=dev nodemon ./src/main.js",
-    "production": "cross-env NODE_ENV=production ./src/main.js"
+    "production": "cross-env NODE_ENV=production node ./src/main.js"
   },
   "repository": {
     "type": "git",
