--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node+MySQL",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=dev nodemon ./src/main.js",
+    "start": "cross-env NODE_ENV=production node ./src/main.js",
     "dev": "cross-env NODE_ENV=dev nodemon ./src/main.js",
     "production": "cross-env NODE_ENV=production node ./src/main.js"
   },
@@ -26,8 +26,10 @@
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-router": "^12.0.0",
+    "koa2-swagger-ui": "^5.9.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.25.4"
+    "sequelize": "^6.25.4",
+    "swagger-jsdoc": "^6.2.8"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
